feat: proba model with train test by year

--- a/notebooks/freq_model.ipynb
+++ b/notebooks/freq_model.ipynb
@@ -17,52 +17,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_past_meta(\n",
-    "    df,\n",
-    "    row,\n",
-    "    n_past_meta,\n",
-    "    name_meta_col = \"meta\"\n",
-    "):\n",
-    "    idx = row.name\n",
-    "        \n",
-    "    list_past_meta = df.loc[idx-n_past_meta:idx - 1, name_meta_col].to_list()\n",
-    "    \n",
-    "    if len(list_past_meta) == 1:\n",
-    "        return str(list_past_meta[0])\n",
-    "        \n",
-    "    return tuple([str(i) for i in list_past_meta])\n",
-    "\n",
-    "\n",
-    "def predict(\n",
-    "    past_meta,\n",
-    "    df_probas\n",
-    "):\n",
-    "    \n",
-    "    # if this past_meta is not in df_proba\n",
-    "    if past_meta not in df_probas.columns:\n",
-    "        return float('nan')\n",
-    "    \n",
-    "    \n",
-    "    # create probability dict\n",
-    "    dict_probas = df_probas.loc[:,past_meta].to_dict()\n",
-    "    \n",
-    "    \n",
-    "    # get the meta with greater proba\n",
-    "    pred_meta = max(dict_probas, key=dict_probas.get)\n",
-    "    \n",
-    "    return pred_meta\n",
-    "\n",
-    "def get_classification_report(y_test, y_pred):\n",
-    "    '''Source: https://stackoverflow.com/questions/39662398/scikit-learn-output-metrics-classification-report-into-csv-tab-delimited-format'''\n",
-    "    report = classification_report(y_test, y_pred, output_dict=True)\n",
-    "    df_classification_report = pd.DataFrame(report).transpose()\n",
-    "    df_classification_report = df_classification_report.sort_values(by=['f1-score'], ascending=False)\n",
-    "    return df_classification_report\n",
-    "    "
+    "import sys\n",
+    "sys.path.append('../src')\n",
+    "from model.proba_model import get_past_meta, predict\n",
+    "from model.evaluation import get_classification_report"
    ]
   },
   {
@@ -76,9 +38,7 @@
     "\n",
     "list_assets = [\"PETR3.SA\",\"PRIO3.SA\", \"VALE3.SA\", \"GGBR3.SA\", \"ABCB4.SA\", \"ITUB3.SA\", \"FLRY3.SA\", \"RADL3.SA\"]\n",
     "\n",
-    "relevant_cols = ['Date', 'Close', 'Volume']\n",
-    "\n",
-    "\n"
+    "relevant_cols = ['Date', 'Close', 'Volume']"
    ]
   },
   {
