fix: dummy model results for relat

--- a/notebooks/freq_model.ipynb
+++ b/notebooks/freq_model.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Imports"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,8 +35,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Definitions"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,6 +53,361 @@
     "list_assets = [\"PETR3.SA\",\"PRIO3.SA\", \"VALE3.SA\", \"GGBR3.SA\", \"ABCB4.SA\", \"ITUB3.SA\", \"FLRY3.SA\", \"RADL3.SA\"]\n",
     "\n",
     "relevant_cols = ['Date', 'Close', 'Volume']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Classification"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dummy Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "#################\n",
+      "# asset: PETR3.SA\n",
+      "#################          \n",
+      "          \n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "          -2       0.58      0.58      0.58        36\n",
+      "          -1       0.75      0.75      0.75       169\n",
+      "           0       0.84      0.84      0.84       458\n",
+      "           1       0.77      0.77      0.77       235\n",
+      "           2       0.63      0.63      0.63        62\n",
+      "           3       0.67      0.67      0.67         3\n",
+      "\n",
+      "    accuracy                           0.79       963\n",
+      "   macro avg       0.71      0.71      0.71       963\n",
+      "weighted avg       0.79      0.79      0.79       963\n",
+      "\n",
+      "\\begin{tabular}{rrrrr}\n",
+      "\\toprule\n",
+      "p & precision & recall & f1-score & q \\\\\n",
+      "\\midrule\n",
+      "-2 & 0.58 & 0.58 & 0.58 & 36 \\\\\n",
+      "-1 & 0.75 & 0.75 & 0.75 & 169 \\\\\n",
+      "0 & 0.84 & 0.84 & 0.84 & 458 \\\\\n",
+      "1 & 0.77 & 0.77 & 0.77 & 235 \\\\\n",
+      "2 & 0.63 & 0.63 & 0.63 & 62 \\\\\n",
+      "3 & 0.67 & 0.67 & 0.67 & 3 \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "\n",
+      "\n",
+      "#################\n",
+      "# asset: PRIO3.SA\n",
+      "#################          \n",
+      "          \n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "          -2       0.70      0.70      0.70        37\n",
+      "          -1       0.72      0.72      0.72       147\n",
+      "           0       0.83      0.83      0.83       454\n",
+      "           1       0.76      0.76      0.76       249\n",
+      "           2       0.68      0.68      0.68        76\n",
+      "\n",
+      "    accuracy                           0.78       963\n",
+      "   macro avg       0.74      0.74      0.74       963\n",
+      "weighted avg       0.78      0.78      0.78       963\n",
+      "\n",
+      "\\begin{tabular}{rrrrr}\n",
+      "\\toprule\n",
+      "p & precision & recall & f1-score & q \\\\\n",
+      "\\midrule\n",
+      "-2 & 0.70 & 0.70 & 0.70 & 37 \\\\\n",
+      "-1 & 0.72 & 0.72 & 0.72 & 147 \\\\\n",
+      "0 & 0.83 & 0.83 & 0.83 & 454 \\\\\n",
+      "1 & 0.76 & 0.76 & 0.76 & 249 \\\\\n",
+      "2 & 0.68 & 0.68 & 0.68 & 76 \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "\n",
+      "\n",
+      "#################\n",
+      "# asset: VALE3.SA\n",
+      "#################          \n",
+      "          \n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "          -3       0.67      0.67      0.67         6\n",
+      "          -2       0.71      0.71      0.71        75\n",
+      "          -1       0.75      0.75      0.75       224\n",
+      "           0       0.84      0.84      0.84       431\n",
+      "           1       0.78      0.78      0.78       173\n",
+      "           2       0.68      0.68      0.68        50\n",
+      "           3       0.50      0.50      0.50         4\n",
+      "\n",
+      "    accuracy                           0.79       963\n",
+      "   macro avg       0.70      0.70      0.70       963\n",
+      "weighted avg       0.79      0.79      0.79       963\n",
+      "\n",
+      "\\begin{tabular}{rrrrr}\n",
+      "\\toprule\n",
+      "p & precision & recall & f1-score & q \\\\\n",
+      "\\midrule\n",
+      "-3 & 0.67 & 0.67 & 0.67 & 6 \\\\\n",
+      "-2 & 0.71 & 0.71 & 0.71 & 75 \\\\\n",
+      "-1 & 0.75 & 0.75 & 0.75 & 224 \\\\\n",
+      "0 & 0.84 & 0.84 & 0.84 & 431 \\\\\n",
+      "1 & 0.78 & 0.78 & 0.78 & 173 \\\\\n",
+      "2 & 0.68 & 0.68 & 0.68 & 50 \\\\\n",
+      "3 & 0.50 & 0.50 & 0.50 & 4 \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "\n",
+      "\n",
+      "#################\n",
+      "# asset: GGBR3.SA\n",
+      "#################          \n",
+      "          \n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "          -3       0.33      0.33      0.33         6\n",
+      "          -2       0.64      0.64      0.64        56\n",
+      "          -1       0.70      0.70      0.70       172\n",
+      "           0       0.84      0.84      0.84       494\n",
+      "           1       0.75      0.74      0.75       183\n",
+      "           2       0.67      0.67      0.67        49\n",
+      "           3       0.67      0.67      0.67         3\n",
+      "\n",
+      "    accuracy                           0.78       963\n",
+      "   macro avg       0.66      0.66      0.66       963\n",
+      "weighted avg       0.78      0.78      0.78       963\n",
+      "\n",
+      "\\begin{tabular}{rrrrr}\n",
+      "\\toprule\n",
+      "p & precision & recall & f1-score & q \\\\\n",
+      "\\midrule\n",
+      "-3 & 0.33 & 0.33 & 0.33 & 6 \\\\\n",
+      "-2 & 0.64 & 0.64 & 0.64 & 56 \\\\\n",
+      "-1 & 0.70 & 0.70 & 0.70 & 172 \\\\\n",
+      "0 & 0.84 & 0.84 & 0.84 & 494 \\\\\n",
+      "1 & 0.75 & 0.74 & 0.75 & 183 \\\\\n",
+      "2 & 0.67 & 0.67 & 0.67 & 49 \\\\\n",
+      "3 & 0.67 & 0.67 & 0.67 & 3 \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "\n",
+      "\n",
+      "#################\n",
+      "# asset: ABCB4.SA\n",
+      "#################          \n",
+      "          \n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "          -2       0.64      0.64      0.64        28\n",
+      "          -1       0.68      0.68      0.68       157\n",
+      "           0       0.80      0.80      0.80       474\n",
+      "           1       0.70      0.70      0.70       233\n",
+      "           2       0.60      0.60      0.60        70\n",
+      "           3       0.00      0.00      0.00         1\n",
+      "\n",
+      "    accuracy                           0.73       963\n",
+      "   macro avg       0.57      0.57      0.57       963\n",
+      "weighted avg       0.73      0.73      0.73       963\n",
+      "\n",
+      "\\begin{tabular}{rrrrr}\n",
+      "\\toprule\n",
+      "p & precision & recall & f1-score & q \\\\\n",
+      "\\midrule\n",
+      "-2 & 0.64 & 0.64 & 0.64 & 28 \\\\\n",
+      "-1 & 0.68 & 0.68 & 0.68 & 157 \\\\\n",
+      "0 & 0.80 & 0.80 & 0.80 & 474 \\\\\n",
+      "1 & 0.70 & 0.70 & 0.70 & 233 \\\\\n",
+      "2 & 0.60 & 0.60 & 0.60 & 70 \\\\\n",
+      "3 & 0.00 & 0.00 & 0.00 & 1 \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "\n",
+      "\n",
+      "#################\n",
+      "# asset: ITUB3.SA\n",
+      "#################          \n",
+      "          \n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "          -3       0.00      0.00      0.00         1\n",
+      "          -2       0.76      0.76      0.76        54\n",
+      "          -1       0.77      0.78      0.78       203\n",
+      "           0       0.82      0.82      0.82       403\n",
+      "           1       0.79      0.79      0.79       243\n",
+      "           2       0.61      0.61      0.61        57\n",
+      "           3       0.00      0.00      0.00         2\n",
+      "\n",
+      "    accuracy                           0.79       963\n",
+      "   macro avg       0.54      0.54      0.54       963\n",
+      "weighted avg       0.79      0.79      0.79       963\n",
+      "\n",
+      "\\begin{tabular}{rrrrr}\n",
+      "\\toprule\n",
+      "p & precision & recall & f1-score & q \\\\\n",
+      "\\midrule\n",
+      "-3 & 0.00 & 0.00 & 0.00 & 1 \\\\\n",
+      "-2 & 0.76 & 0.76 & 0.76 & 54 \\\\\n",
+      "-1 & 0.77 & 0.78 & 0.78 & 203 \\\\\n",
+      "0 & 0.82 & 0.82 & 0.82 & 403 \\\\\n",
+      "1 & 0.79 & 0.79 & 0.79 & 243 \\\\\n",
+      "2 & 0.61 & 0.61 & 0.61 & 57 \\\\\n",
+      "3 & 0.00 & 0.00 & 0.00 & 2 \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "\n",
+      "\n",
+      "#################\n",
+      "# asset: FLRY3.SA\n",
+      "#################          \n",
+      "          \n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "          -2       0.61      0.62      0.61        55\n",
+      "          -1       0.73      0.73      0.73       264\n",
+      "           0       0.81      0.81      0.81       443\n",
+      "           1       0.75      0.75      0.75       168\n",
+      "           2       0.63      0.63      0.63        30\n",
+      "           3       0.67      0.67      0.67         3\n",
+      "\n",
+      "    accuracy                           0.76       963\n",
+      "   macro avg       0.70      0.70      0.70       963\n",
+      "weighted avg       0.76      0.76      0.76       963\n",
+      "\n",
+      "\\begin{tabular}{rrrrr}\n",
+      "\\toprule\n",
+      "p & precision & recall & f1-score & q \\\\\n",
+      "\\midrule\n",
+      "-2 & 0.61 & 0.62 & 0.61 & 55 \\\\\n",
+      "-1 & 0.73 & 0.73 & 0.73 & 264 \\\\\n",
+      "0 & 0.81 & 0.81 & 0.81 & 443 \\\\\n",
+      "1 & 0.75 & 0.75 & 0.75 & 168 \\\\\n",
+      "2 & 0.63 & 0.63 & 0.63 & 30 \\\\\n",
+      "3 & 0.67 & 0.67 & 0.67 & 3 \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "\n",
+      "\n",
+      "#################\n",
+      "# asset: RADL3.SA\n",
+      "#################          \n",
+      "          \n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "          -2       0.75      0.75      0.75        48\n",
+      "          -1       0.76      0.76      0.76       173\n",
+      "           0       0.81      0.81      0.81       452\n",
+      "           1       0.78      0.78      0.78       260\n",
+      "           2       0.57      0.57      0.57        28\n",
+      "           3       0.00      0.00      0.00         2\n",
+      "\n",
+      "    accuracy                           0.78       963\n",
+      "   macro avg       0.61      0.61      0.61       963\n",
+      "weighted avg       0.78      0.78      0.78       963\n",
+      "\n",
+      "\\begin{tabular}{rrrrr}\n",
+      "\\toprule\n",
+      "p & precision & recall & f1-score & q \\\\\n",
+      "\\midrule\n",
+      "-2 & 0.75 & 0.75 & 0.75 & 48 \\\\\n",
+      "-1 & 0.76 & 0.76 & 0.76 & 173 \\\\\n",
+      "0 & 0.81 & 0.81 & 0.81 & 452 \\\\\n",
+      "1 & 0.78 & 0.78 & 0.78 & 260 \\\\\n",
+      "2 & 0.57 & 0.57 & 0.57 & 28 \\\\\n",
+      "3 & 0.00 & 0.00 & 0.00 & 2 \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "n_prev_meta = 1\n",
+    "\n",
+    "\n",
+    "list_results = []\n",
+    "for asset in list_assets:\n",
+    "    \n",
+    "    print(f\"\"\"\n",
+    "#################\n",
+    "# asset: {asset}\n",
+    "#################          \n",
+    "          \"\"\")\n",
+    "    \n",
+    "    # get train contigency table \n",
+    "    cont_tbl_train = pd.read_csv(path_data_dir + f\"processed/train_contingency_table_price_history_{asset.replace('.', '_')}_meta_range({n_prev_meta})_dataset_ffill.csv\", index_col=0, header=[i for i in range(n_prev_meta)])\n",
+    "    \n",
+    "    # create probability table\n",
+    "    df_probas = cont_tbl_train.apply(lambda x: [col/sum(x) for col in x])    \n",
+    "    \n",
+    "    # get test dataset\n",
+    "    test_dataset = pd.read_csv(path_data_dir + f\"processed/test_price_history_{asset.replace('.', '_')}_meta_dataset_ffill.csv\", index_col= 0)\n",
+    "    \n",
+    "    # get the past meta for all days    \n",
+    "    test_dataset[\"past_meta\"] = test_dataset.apply(lambda x: get_past_meta(test_dataset,x,n_prev_meta,name_meta_col = \"meta\"), axis=1)\n",
+    "\n",
+    "    # remove the first rows\n",
+    "    test_dataset = test_dataset.iloc[n_prev_meta:]\n",
+    "    \n",
+    "    # get y_test\n",
+    "    y_test = test_dataset.meta\n",
+    "    \n",
+    "    # predict based on probability table\n",
+    "    y_pred = test_dataset.past_meta.astype('int')\n",
+    "    \n",
+    "    # create df with results\n",
+    "    df_results_p = get_classification_report(y_test, y_pred)\n",
+    "    df_results_p['asset'] = asset\n",
+    "    \n",
+    "    print(classification_report(y_test, y_pred))\n",
+    "    \n",
+    "    \n",
+    "    list_results.append(df_results_p)\n",
+    "    \n",
+    "    df_results_p = df_results_p.drop(['weighted avg', 'macro avg', 'accuracy'])\n",
+    "    df_results_p.index = df_results_p.index.astype('int')\n",
+    "    df_results_p = df_results_p.reset_index()\n",
+    "    df_results_p.support = df_results_p.support.astype('int')\n",
+    "    \n",
+    "    df_results_p.drop(['asset'],axis = 1,inplace = True)\n",
+    "    df_results_p.rename(\n",
+    "        {\n",
+    "            'index':'p',\n",
+    "            \"precision\": 'precision',\n",
+    "            \"recall\": 'recall',\n",
+    "            \"f1-score\": 'f1-score',\n",
+    "            \"support\": \"q\"\n",
+    "        }\n",
+    "        \n",
+    "        \n",
+    "        ,axis = 1, inplace = True)\n",
+    "\n",
+    "    df_results_p.sort_values('p', inplace = True)\n",
+    "    print(df_results_p.to_latex(index=False,float_format=\"%.2f\"))\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "df_results = pd.concat(list_results)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Bayesian dependent model"
    ]
   },
   {
