change valid data

--- a/notebooks/model_arquiteture_viz.ipynb
+++ b/notebooks/model_arquiteture_viz.ipynb
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
     "    num_classes=None\n",
     "    )\n",
     "\n",
-    "display(plot_model(model, to_file=MODELS_IMAGES_PATH + 'model_cnn_aug_graph.png', show_shapes=True, show_layer_names=True, show_layer_activations=True, show_trainable=True, expand_nested=True))"
+    "display(plot_model(model, to_file=MODELS_IMAGES_PATH + 'model_MLP_graph.png', show_shapes=True, show_layer_names=True, show_layer_activations=True, show_trainable=True, expand_nested=True))"
    ]
   },
   {
